--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link href="/public/css/style.css" rel="stylesheet" />
+    <link href=/support/public/css/style.css" rel="stylesheet" />
     <link href="http://js-grid.com/css/jsgrid.min.css" rel="stylesheet" />
     <link href="http://js-grid.com/css/jsgrid-theme.min.css" rel="stylesheet" />
     <title>JSGrid and PHP Sample</title>
@@ -18,6 +18,6 @@
 
 <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="http://js-grid.com/js/jsgrid.min.js"></script>
-<script src="/public/js/sample.js"></script>
+<script src="/support/public/js/sample.js"></script>
 </body>
 </html>
